--- a/MasterBits/MasterBits/MasterBits.csproj
+++ b/MasterBits/MasterBits/MasterBits.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="AllInclusive.cs" />
     <Compile Include="DirReduction.cs" />
+    <Compile Include="NoBoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToAlternatingCase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
