--- a/MasterBits/MasterBits.Tests/MasterBits.Tests.csproj
+++ b/MasterBits/MasterBits.Tests/MasterBits.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AllInclusiveTests.cs" />
     <Compile Include="NoBoringTests.cs" />
     <Compile Include="ToAlternatingCaseTests.cs" />
+    <Compile Include="IsAnagramTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MasterBits\MasterBits.csproj">
