--- a/MasterBits/MasterBits/MasterBits.csproj
+++ b/MasterBits/MasterBits/MasterBits.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,8 @@
     <Compile Include="AllInclusive.cs" />
     <Compile Include="CountLower.cs" />
     <Compile Include="DirReduction.cs" />
+    <Compile Include="EasyLine.cs" />
+    <Compile Include="GridPath.cs" />
     <Compile Include="IsAnagram.cs" />
     <Compile Include="NoBoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
